--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ h1 {
     color: darkblue;
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -22,5 +22,27 @@ img {
 }
     
 p {
-        padding: 10px;
+        padding: 0;
+}
+    
+        aside {
+        width: 20em;
+        margin: 1em;
+        border: 1px solid rgb(0 0 0 / 0.2); 
+        padding: 1em;
+        background-color:#eee 
+        color(#333);
+        text-align: center;
     }
+
+    aside img{
+        width: 200px;
+        height: auto;
+    }
+
+    footer {
+        margin-top: 15em;
+        border-top: 1px solid #000;
+        text-align: center;
+    }
+    
