--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,7 @@ h1 {
 }
 
 main img {
+    max-width: 840px;
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -30,8 +31,8 @@ p {
         margin: 1em;
         border: 1px solid rgb(0 0 0 / 0.2); 
         padding: 1em;
-        background-color:#eee 
-        color(#333);
+        background-color:#eee; 
+        color:#333;
         text-align: center;
     }
 
