--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+* {
+   margin: 0;
+   padding: 0; 
+   box-sizing: border-box;
+}
+
 nav   {
     background-color:  darkblue;
     padding: 10px;
@@ -19,6 +25,7 @@ main img {
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px grey;
+    float: right;
 }
 
 main { 
@@ -29,7 +36,7 @@ p {
     padding: 0;
 }
     
-aside {
+aside  {
     width: 20em;
     margin: 1em;
     border: 1px solid rgb(0 0 0 / 0.2); 
@@ -37,16 +44,33 @@ aside {
     background-color:#eee; 
     color:#333;
     text-align: center;
-}
+    }
+
+    aside h2 {
+        position: relative;
+        top: 1rem;
+        left: 1rem;
+
+    }
 
 aside img{
     width: 200px;
     height: auto;
+    
 }
 
 footer {
     margin-top: 15em;
     border-top: 1px solid #000;
     text-align: center;
+}
+/* Class Selectors */
+
+.box {
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 /  0.1);
+    padding: 1rem;
+    background-color: aquamarine;
+    color: #000;
 }
     
