--- a/whitewater-rafting-website/styles/styles.css
+++ b/whitewater-rafting-website/styles/styles.css
@@ -31,7 +31,7 @@ header nav ul li a {
 
 /* Hero Section */
 #hero {
-    background-image: url("/whitewater-rafting-website/images/rafting3.jpg");
+    background-image: url("/images/rafting3.jpg");
     background-size: cover;
     text-align: center;
     padding: 100px 0;
