--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -10,6 +10,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
   
   body {
     background-color: var(--background-color);
@@ -17,18 +18,26 @@
     font-family: "Roboto", sans-serif;
   }
   
-  h1 {
+  h1, h2 {
     color: var(--primary-color);
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
 }
+
+p {
+  color: var(--primary-color);
+}
+
+/* #content {
+  max-width: 960px;
+  margin: 0 auto;
+} */
   
   button {
     background-color: var(--secondary-color);
     color: #caf0f8;
-    padding: 10px 20px;
     border: none;
     border-radius: 5px;
   }
@@ -81,6 +90,79 @@ nav ul li a:hover {
     color: var(--accent-color);
 }
 
+main { 
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.hero {
+  display: grid;
+  grid-column: 1 / -1;
+}
+.history {
+  grid-column: 1/-1;
+}
+
+.history section{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem;
+  padding: 1.5rem;
+}
+
+.history section h2 {
+  display: grid;
+  grid-column: 1 / -1;
+  grid-row: 1;
+  text-align: center;
+}
+
+p1 {
+  grid-column: 1;
+}
+
+p2 {
+  grid-column: -1;
+}
+
+.adventures {
+  display: grid;
+  grid-column: 1/-1;
+}
+
+.adventures section {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 1rem;
+}
+
+.adventures section h2 {
+  display: grid;
+  grid-column: 1/-1;
+  text-align: center;
+}
+
+/* footer styles */
+footer {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  align-items: center;
+  background-color: #3e3e3e;
+  color: white;
+}
+
+footer > p {
+  grid-column: 1/-1;
+  padding-top: 2.5rem;
+  color: white;
+}
+
+.social-icons {
+  grid-column: 4/6;
+  justify-self: end;
+  padding: 0 0.5em 0.5em 0;
+}
+
 @media (max-width: 768px) {
     header {
         grid-template-columns: 1fr; /* Stack logo and nav on smaller screens */
@@ -104,9 +186,9 @@ nav ul li a:hover {
     height: 400px;
     background-size: cover;
     background-position: center;
-    background-color: #48cae4; 
+    /* background-color: #48cae4;  */
     z-index: 1;
-}
+  }
   
   .hero h1,
   .hero article {
@@ -126,20 +208,20 @@ nav ul li a:hover {
     height: auto;
     margin-left: 20px;
     z-index: 3; 
-}
+  }
   
   .hero article {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-}
+  }
 
 .hero article img {
     margin-left: 20px;
     width: 200px;
     height: auto;
-}
+  }
   
   .social-icons a.social-icon {
     text-decoration: none;
@@ -154,4 +236,5 @@ nav ul li a:hover {
   .social-icons a img {
     width: 32px; 
     height: auto;
+  
 }
