--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -10,7 +10,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
   
   body {
     background-color: var(--background-color);
@@ -53,12 +52,12 @@ p {
     justify-items: center;
     background-color: var(--primary-color);
     align-items: center;
-    padding: 15px 20px;
+    padding: 0.8px 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .logo img {
-    max-height: 50px;
+    max-height: 30px;
     width: auto;
     display: block;
 }
@@ -99,6 +98,10 @@ main {
   display: grid;
   grid-column: 1 / -1;
 }
+
+figcaption {
+  color: #03045e;
+}
 .history {
   grid-column: 1/-1;
 }
@@ -114,8 +117,9 @@ main {
   display: grid;
   grid-column: 1 / -1;
   grid-row: 1;
-  text-align: center;
+  text-align: center; 
 }
+
 
 p1 {
   grid-column: 1;
@@ -134,6 +138,28 @@ p2 {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 1rem;
+}
+
+.adventures section img{
+  padding: 1rem;
+ 
+}
+
+figcaption{
+  text-align: center;
+}
+
+.figure_flex{
+  display: flex;
+}
+
+figure img{
+  width: 230px;
+}
+
+figure{
+  padding: 0;
+  margin: 10px;
 }
 
 .adventures section h2 {
@@ -182,12 +208,10 @@ footer > p {
 
   .hero {
     position: relative;
+  }
+
+  .hero img {
     width: 100%;
-    height: 400px;
-    background-size: cover;
-    background-position: center;
-    /* background-color: #48cae4;  */
-    z-index: 1;
   }
   
   .hero h1,
@@ -201,9 +225,12 @@ footer > p {
   
   .hero article {
     top: 60px;
+    background-color: rgba(225, 225, 225, .70);
+    padding: 1rem;     /* moves the text away from the edges */
   }
   
   .hero article img {
+    float: right;
     width: 200px;
     height: auto;
     margin-left: 20px;
