--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -195,7 +195,7 @@ display: grid;
 
 .forms section{
   display: flex;
-  align-items: right;
+  align-items:center;
   color: #03045e;
   padding-left: 1rem;
 }
@@ -205,8 +205,8 @@ display: grid;
 
 .map {
   display: flex;
-  align-items: left;
-  padding-right: 10;
+  align-items:flex-end;
+  padding-right: 5rem;
 }
 
 /* footer styles */
