--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -53,7 +53,8 @@ p {
     background-color: var(--primary-color);
     align-items: center;
     padding: 0.8px 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px #caf0f8 
+    /* rgba(0, 0, 0, 0.1); */
 }
 
 .logo img {
@@ -77,7 +78,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #ffffff; /* Text color */
+    color: #caf0f8; /* Text color */
     text-decoration: none; /* Remove underline */
     font-size: 16px;
     font-weight: 500;
@@ -98,8 +99,17 @@ nav ul li a:hover {
   display: grid;
   grid-column: 1 / -1;
 }
+      /* *{ */
+  /* margin: 0; */
+  /* padding: 0; */
+  /* box-sizing: border-box; */
+      /* } */
+      /* div { */
+        /* display: block; */
+        /* unicode-bidi: isolate; */
+    /* } */
 
-.hero img 
+  .hero img 
 
 figcaption {
   color: #03045e;
@@ -114,6 +124,11 @@ figcaption {
   grid-gap: 1rem;
   padding: 1.5rem;
 }
+/* .history section { */
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: space-around; */
+/* } */
 
 .history section h2 {
   display: grid;
@@ -183,12 +198,13 @@ figcaption{
 
 .figure_flex{
   display: flex;
-  margin: none;
+  /* margin: 1px; */
   
 }
 
 figure img{
   width: 230px;
+  /* height: 300px; */
 }
 
 figure{
@@ -297,14 +313,14 @@ footer {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   align-items: center;
-  background-color: #3e3e3e;
-  color: white;
+  background-color: #00b4d8 
+  /* var(--text-color)  #caf0f8; */
 }
 
 footer > p {
   grid-column: 1/-1;
   padding: 2.5rem;
-  color: white;
+  color: #caf0f8;
 }
 
 .social-icons {
@@ -320,15 +336,38 @@ footer > p {
     }
 
     nav ul {
-        flex-direction: column; /* Stack nav items vertically */
-        align-items: center;
+      flex-direction: column;                          /*Stack nav items vertically */
+      align-items:center;
     }
+
+    /* nav ul { */
+       /* flex-direction:row */
+    /* } */
 
     nav a {
         font-size: 18px;
-        padding: 10px 0;
+        padding: 4px 0;
     }
-}
+
+    /* .navbar { */
+      /* display: flex; Activate Flexbox */
+      /* justify-content: space-between;  Spread links evenly across */
+      /* flex: end; */
+      /* font-size: 18px; */
+      /* padding: 10px 0; Space inside the nav */
+    /* } */
+    /* .nav-item { */
+      /* color: #caf0f8;  */
+      /* text-decoration: none;       Remove underlines */
+      /* padding: 10px 15px;     Spacing around items */
+    /* } */
+    
+    .nav-item:hover {
+      /* background-color: #00b4d8;      Highlight effect on hover */
+      border-radius: 5px;
+    }
+    
+  }
 
   .hero {
     position: relative;
@@ -349,9 +388,10 @@ footer > p {
   
   .hero article {
     top: 60px;
-    background-color: rgba(225, 225, 225, .70);
+    background-color: #caf0f8; 
     padding: 1rem;     /* moves the text away from the edges */
   }
+
   
   .hero article img {
     float: right;
@@ -381,7 +421,8 @@ footer > p {
   }
   
   .social-icons a.social-icon:hover {
-   color: #3498db;
+   color: #caf0f8
+   /* #3498db; */
   }
 
   .social-icons a img {
