--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -109,7 +109,7 @@ nav ul li a:hover {
         /* unicode-bidi: isolate; */
     /* } */
 
-  .hero img 
+  /* .hero img  */
 
 figcaption {
   color: #03045e;
@@ -199,15 +199,14 @@ figcaption{
 .figure_flex{
   display: flex;
   flex-direction: row;
-  align-content: space-between;
-  /* width: 250px; */
 }
 
 figure img{
-  width: 300px;
-  margin: 5px;
+  /* position: relative; */
+  /* width: 300px; */
+  margin: 2px;
   padding: 2px;
-  /* height: 300px; */
+  /* height: 500px; */
 }
 
 figure{
@@ -328,22 +327,26 @@ textarea {
 .flex-map, #map {
   padding: 1rem; 
 }
-.figure_flex {
-  height: 350px;
-}
+/* .figure_flex { */
+  /* display: flex; */
+  /* flex-direction: row; */
+  /* height: 350px; */
+  /* width: 100%; */
+/* } */
+
 
 .contact {
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;
-  border-radius: auto;
   margin: 2rem;
   /* padding: 2rem; */
 }
 
 .prof {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
    color: #03045e;
@@ -369,7 +372,7 @@ footer {
   grid-template-columns: repeat(5, 1fr);
   align-items: center;
   background-color: #00b4d8; 
-  size: 100px;
+  /* resize: 100px; */
   
 }
 
@@ -448,7 +451,17 @@ footer > p {
     padding: 1rem;     /* moves the text away from the edges */
   }
 
+  .trips {
+    width: auto;
+    display: flex;
+    flex-direction: row;
+  }
   
+  .map {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .hero article img {
     float: right;
     width: 200px;
