--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    background-color: #caf0f8;
-    color: #00b4d8;
+    background-color: var(--background-color);
+    color: var(--text-color);
     font-family: "Roboto", sans-serif;
-    font-size: 1.2rem;
+    
   }
