--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -17,12 +17,14 @@
     font-family: "Roboto", sans-serif;
   }
   
-  h1, h2 {
+  h1, h2, h3, h4 {
     color: var(--primary-color);
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
+    padding: 15px; 
+    
 }
 
 p {
@@ -67,15 +69,15 @@ nav ul {
     display: flex;
     list-style-type: none;
     padding: 1rem;
-    margin: 0;
+    margin-left: 20px;
     justify-content: space-evenly;
     align-items: center;
     gap: 20px;
 }
 
-nav ul li {
-    margin-left: 20px;
-}
+/* nav ul li { */
+    /* margin-left: 20px; */
+/* } */
 
 nav ul li a {
     color: #caf0f8; /* Text color */
@@ -232,6 +234,8 @@ section.contact-form fieldset {
 /* .form-option { */
 section.contact-form option {
   height: 35px;
+  /* padding: 10rem; */
+  /* border: 2px; */
 }
 
 /* .form-label { */
@@ -670,10 +674,10 @@ a.cta-button:hover {
   border-radius: 10px;
 }
 
- h2, h3, h4, h5 {
-  padding: 15px;
-  font-size: 18px;
-}
+ /* h2, h3, h4, h5 { */
+  /* padding: 15px; */
+  /* font-size: 18px; */
+/* } */
 
 h6{
   padding: 10px;
