--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -23,8 +23,7 @@
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
-    padding: 15px; 
-    
+    padding: 15px;    
 }
 
 p {
@@ -244,6 +243,7 @@ section.contact-form label {
   flex-direction: column;
   width: auto;
   height: 27px;
+  color: #03045e;
   /* padding: 1px; */
 }
 
@@ -325,11 +325,11 @@ section.contact-form input, textarea, button {
   /* height: max-content; */
 /* } */
 
-.map {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+/* .map { */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+/* } */
 
 
 .flex-map, #map {
@@ -384,7 +384,7 @@ main.home h1 h2 h3 h4 h5 h6 {
   border-radius: 10px;
 }
 
-.contact-info, .contact-form {
+.contact-info {
   flex: 1;
   min-width: 300px;
 }
@@ -425,10 +425,10 @@ main.home h1 h2 h3 h4 h5 h6 {
 }
 
 /* label { */
-section.contact-form label {
-  color: #03045e;
+/* section.contact-form label { */
+  /* color: #03045e; */
   
-}
+/* } */
 
 .Follow {
   color: #03045e;
@@ -544,11 +544,6 @@ footer > p {
     top: 60px;
     background-color: #caf0f8; 
     padding: 2rem; 
-   
-  /* } */
-
-   /* .hero h1, */
-   /* .hero article { */
     position: absolute;
     top: 20px;
     left: 20px;
@@ -631,10 +626,10 @@ a.cta-button:hover {
   margin: 20px auto;
 }
 
-  h5 {
-  color: var(--primary-color);
-  margin-bottom: 15px;
-}
+  /* h5 { */
+  /* color: var(--primary-color); */
+  /* margin-bottom: 15px; */
+/* } */
 
  label {
   color: var(--secondary-color);
